fix white color text in dark mode in input fields

--- a/src/global.scss
+++ b/src/global.scss
@@ -113,6 +113,7 @@ span, p , div, button, h1, h2, h3, h4, h5, h6 {
     border-radius: 8px;
     outline: none;
     border: none;
+  color: black;
 }
 
 .ordinary-element {
